se puede ver reloj

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
   </nav>
   <section id="Section_1" class="section">
     <h3>Section 1</h3>
+    <div id="reloj_container" class="container reloj">
+      <h3 id="reloj" class="reloj"></h3>
+    </div>
+    <div id="controlador_reloj" class="container reloj">
+      <button id="button-view-reloj" class="button-reloj">Inicar Reloj</button>
+      <button id="button-view-stop" class="button-reloj">Detener Reloj</button>
+      <button id="button-sound-inicia" class="button-reloj">Iniciar alarma</button>
+      <button id="button-sound-stop" class="button-reloj">Detener alarma</button>
+    </div>
   </section>
   <section id="Section_2" class="section">
     <h3>Section 2</h3>
