--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </section>
   <nav id="menuPalanca" class="palanca">
     <ul>
-      <li><a class="aMenuNav botonPalanca" href="#Section_1">Section 1</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_1">Reloj Digital y alarma Sonora</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_2">Section 2</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_3">Section 3</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_4">Section 4</a></li>
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   <section id="Section_1" class="section">
-    <h3>Section 1</h3>
+    <h3>Reloj Digital y alarma Sonora</h3>
     <div id="reloj_container" class="container reloj">
       <form name="form_reloj">
         <input type="text" name="reloj" readonly>
