--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav id="menuPalanca" class="palanca">
     <ul>
       <li><a class="aMenuNav botonPalanca" href="#Section_1">Reloj Digital y alarma Sonora</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_2">Section 2</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_2">Evento Teclado</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_3">Section 3</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_4">Section 4</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_5">Section 5</a></li>
@@ -43,7 +43,11 @@
     </div>
   </section>
   <section id="Section_2" class="section">
-    <h3>Section 2</h3>
+    <h3>Evento Teclado</h3>
+    <section id="mapa" class="mapa">
+      <div id="pelota" class="personaje"></div>
+    </section>
+    <input type="password" id="controladorPelota" name="controlador" placeholder="Hcer click aqui para controlar Pelota (Solo direccionar)">
   </section>
   <section id="Section_3" class="section">
     <h3>Section 3</h3>
