Finalizacion con shorcut y pelota

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <section id="mapa" class="mapa">
       <div id="pelota" class="personaje"></div>
     </section>
-    <input type="password" id="controladorPelota" name="controlador" placeholder="Hcer click aqui para controlar Pelota (Solo direccionar)">
+    <input type="password" id="controladorPelota" name="controlador" placeholder="Hacer click aqui para controlar Pelota (Solo direccionar)">
+    <p>Para mostrar: Alert <b>(ALT+a)</b>, Prompt <b>(ALT+p)</b>, Confirm <b>(ALT+c)</b></p>
   </section>
   <section id="Section_3" class="section">
     <h3>Section 3</h3>
