top scroll jquery

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/a54d2cbf95.js"></script><!-- Libreria para hacer topScroll -->
   <title>Ejercicio_DOM</title>
   <link rel="stylesheet" href="estilos.css">
   <link href="hamburgers.css" rel="stylesheet">
@@ -67,6 +68,11 @@
   <section id="Section_5" class="section">
     <h3>Section 5</h3>
   </section>
+<!-- Top Scroll -->
+<a href="#" class="to-top">
+  <i class="fas fa-chevron-up"></i>
+</a>
+<!-- Top Scroll -->
 <script src="DOM.js">
 
 </script>
