--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <i class="fas fa-chevron-up"></i>
 </a>
 <!-- Top Scroll -->
+<div id="dark-mode-container"><button id="dark-mode" class="dark-mode-btn">🌒</button></div>
 <script src="DOM.js">
 
 </script>
