Responsible Responsive Design con JavaScript aplicado

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_1">Reloj Digital y alarma Sonora</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_2">Evento Teclado</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_3">Diferencia Tiempo</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_4">Section 4</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_4">Responsive con JavaScript</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_5">Section 5</a></li>
     </ul>
   </nav>
@@ -63,7 +63,8 @@
     <div id="relojCountDown"></div>
   </section>
   <section id="Section_4" class="section">
-    <h3>Section 4</h3>
+    <h3>Responsible Responsive Design con JavaScript</h3>
+    <div id="containerYM"></div>
   </section>
   <section id="Section_5" class="section">
     <h3>Section 5</h3>
