--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_2">Evento Teclado</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_3">Diferencia Tiempo</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_4">Responsive con JavaScript</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_5">Section 5</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_5">Responsive Tester</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_6">Section 6</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_7">Section 7</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_8">Section 8</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_9">Section 9</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_10">Section 10</a></li>
     </ul>
   </nav>
   <section id="Section_1" class="section">
@@ -67,7 +72,42 @@
     <div id="containerYM"></div>
   </section>
   <section id="Section_5" class="section">
-    <h3>Section 5</h3>
+    <h3>Responsive Tester</h3>
+    <form id="form" action="" method="GET">
+      <div id="upForm">
+        <div>
+          <label for="url">Ingresar URL: </label>
+          <input type="url" name="url" id="v-url" placeholder="URL" required>
+        </div>
+        <div>
+          <label for="altVent">Ingresar Alto: </label>
+          <input type="number" name="altVent" id="v-alto" placeholder="Alto ventana" pattern="^[0-9]{1,4}$" required>
+        </div>
+        <div>
+          <label for="altAnc">Ingresar Ancho: </label>
+          <input type="number" name="altAnc" id="v-ancho" placeholder="Ancho Ventana" pattern="^[0-9]{1,4}$"required>
+        </div>
+      </div>
+      <div id="downForm">
+        <button type="submit" id="abVent">Abrir<br>Ventana</button>
+        <button type="button" id="ceVent">Cerrar<br>Ventana</button>
+      </div>
+    </form>
+  </section>
+  <section id="Section_6" class="section">
+    <h3>Section 6</h3>
+  </section>
+  <section id="Section_7" class="section">
+    <h3>Section 7</h3>
+  </section>
+  <section id="Section_8" class="section">
+    <h3>Section 8</h3>
+  </section>
+  <section id="Section_9" class="section">
+    <h3>Section 9</h3>
+  </section>
+  <section id="Section_10" class="section">
+    <h3>Section 10</h3>
   </section>
 <!-- Top Scroll -->
 <a href="#" class="to-top">
