--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     </form>
   </section>
   <section id="Section_6" class="section">
-    <h3>Section 6</h3>
+    <h3>Deteccion de dispositivos<br>(User Agent)</h3>
+    <div id="user-device"></div>
   </section>
   <section id="Section_7" class="section">
     <h3>Section 7</h3>
