V1 online off line

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
   <section id="Section_10" class="section">
     <h3>Section 10</h3>
   </section>
+  <section id="sConexion">
+  </section>
 <!-- Top Scroll -->
 <a href="#" class="to-top">
   <i class="fas fa-chevron-up"></i>
