--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_3">Diferencia Tiempo</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_4">Responsive con JavaScript</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_5">Responsive Tester</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_6">Section 6</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_7">Section 7</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_6">Deteccion de dispositivos (User Agent)</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_7">Deteccion de dispositivo (Camara)</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_8">Section 8</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_9">Section 9</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_10">Section 10</a></li>
@@ -99,7 +99,12 @@
     <div id="user-device"></div>
   </section>
   <section id="Section_7" class="section">
-    <h3>Section 7</h3>
+    <h3>Deteccion de dispositivo (Camara)</h3>
+    <div id="media">
+      <button id='initVid'>Iniciar Camara</button>
+      <button id='stopVid'>Detener Camara</button>
+    </div>
+    <video id='vContainer' autoplay controls hidden></video>
   </section>
   <section id="Section_8" class="section">
     <h3>Section 8</h3>
