--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
   <section id="Section_7" class="section">
     <h3>Deteccion de dispositivo (Camara)</h3>
     <div id="media">
-      <button id='initVid'>Iniciar Camara</button>
-      <button id='stopVid'>Detener Camara</button>
+      <button id='initVid'>Iniciar<br>Camara</button>
+      <button id='stopVid'>Detener<br>Camara</button>
     </div>
     <video id='vContainer' autoplay controls hidden></video>
   </section>
