--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_5">Responsive Tester</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_6">Deteccion de dispositivos (User Agent)</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_7">Deteccion de dispositivo (Camara)</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_8">Section 8</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_8">Geoposicionamiento</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_9">Section 9</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_10">Section 10</a></li>
     </ul>
@@ -107,7 +107,8 @@
     <video id='vContainer' autoplay controls hidden></video>
   </section>
   <section id="Section_8" class="section">
-    <h3>Section 8</h3>
+    <h3>Geoposicionamiento</h3>
+    <button id="btnGeo">Ubicar<br>Geoposicion</button>
   </section>
   <section id="Section_9" class="section">
     <h3>Section 9</h3>
