--- a/prueba.html
+++ b/prueba.html
@@ -3,46 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>camara</title>
+  <title>Geposicionamiento</title>
 </head>
 <body>
-  <button id='initVid'>Get access to camera</button>
-  <button id='stopVid'>Stop Streaming</button>
-  <video id='vContainer' autoplay controls></video>
-
+  <button id="btnGeo">Ubicar<br>Geoposicion</button>
 </body>
 <script>
-  let statusV=false//control del estadod le video
-  const capVideo=async(e,$btn,$cV,$btnS)=>{
-    let stream,
-        cVideo=document.querySelector($cV)
-    if(!statusV){
-      if(e.target.matches($btn)){
-        try {
-            stream = await navigator.mediaDevices.getUserMedia({
-                          audio: true,
-                          video: true
-                        })
-            cVideo.srcObject = stream
-            statusV=true
-            } catch (error) {
-            alert(`${error.name}`)
-            track.error(error)
-            }
-      }
+let geoTHTML
+ function loadLocation (e) {
+   geoTHTML=e
+ navigator.geolocation.getCurrentPosition(viewMap,ViewError,{timeout:1000});
+}
+
+function viewMap (pos) {
+  const $conGeo=document.getElementById(geoTHTML)
+	let lon = pos.coords.longitude;	//guardamos la longitud
+	let lat = pos.coords.latitude;		//guardamos la latitud
+  let link = "http://maps.google.com/?ll="+lat+","+lon+"&z=16";
+  if(!document.getElementById(`${geoTHTML}Div`)){
+    $conGeo.insertAdjacentHTML('afterend',
+     `<div id=${geoTHTML}Div>
+        <label>Longitud: ${lon}<br></label>
+        <label>Latitud: ${lat}<br></label>
+        <a href="${link}" target="_blank">Enlace al mapa</a>
+      </div>`
+    )}
+  setTimeout(() => {
+    if(document.getElementById(`${geoTHTML}Div`)){
+      let nodoPadre = document.getElementById(`${geoTHTML}Div`).parentNode;
+		  nodoPadre.removeChild(document.getElementById(`${geoTHTML}Div`));
     }
-    if(e.target.matches($btnS)){
-      if(statusV){
-      let tracks = cVideo.srcObject.getTracks();
-      tracks.forEach(q=>q.stop());
-      cVideo.srcObject = null;
-      statusV=false
-      }
-    }
-  } 
+  }, 10000);
+  }
 
-document.addEventListener('click',e=>capVideo(e,'#initVid','#vContainer','#stopVid'))
+function ViewError(err){alert(err)}	
 
-
+document.addEventListener('click',e=>{
+  if(e.target.matches('#btnGeo'))loadLocation('btnGeo')
+})
 </script>
 </html>
