--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_6">Deteccion de dispositivos (User Agent)</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_7">Deteccion de dispositivo (Camara)</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_8">Geolocalizacion</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_9">Section 9</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_9">Filtro</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_10">Section 10</a></li>
     </ul>
   </nav>
@@ -111,7 +111,8 @@
     <button id="btnGeo">Ubicar<br>posicion</button>
   </section>
   <section id="Section_9" class="section">
-    <h3>Section 9</h3>
+    <h3>Filtro</h3>
+    <button id="btnIFiltro">Iniciar<br>Filtro</button>
   </section>
   <section id="Section_10" class="section">
     <h3>Section 10</h3>
