--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_7">Deteccion de dispositivo (Camara)</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_8">Geolocalizacion</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_9">Filtro</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_10">Section 10</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_10">Random Win</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_11">Section 11</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_12">Section 12</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_13">Section 13</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_14">Section 14</a></li>
     </ul>
   </nav>
   <section id="Section_1" class="section">
@@ -115,7 +119,28 @@
     <button id="btnIFiltro">Iniciar<br>Filtro</button>
   </section>
   <section id="Section_10" class="section">
-    <h3>Section 10</h3>
+    <h3>Random Win</h3>
+    <article id='secSorteo'>
+      <div id="divSorteoCont">
+        <button id="btnAddToSorteo">Agregar<br>al sorteo</button>
+        <button id="btnReiniciarSorteo">Reiniciar<br>el sorteo</button>
+      </div>
+      <input type="text" name="" id="inputTSorteo" placeholder="Ingresa Opcion al sorteo">
+      <button id="btnWinSorteo">Ganador del<br>Sorteo</button>
+      <ol id="ilContSort"></ol>
+    </article>
+  </section>
+  <section id="Section_11" class="section">
+    <h3>Section 11</h3>
+  </section>
+  <section id="Section_12" class="section">
+    <h3>Section 12</h3>
+  </section>
+  <section id="Section_13" class="section">
+    <h3>Section 13</h3>
+  </section>
+  <section id="Section_14" class="section">
+    <h3>Section 14</h3>
   </section>
   <section id="sConexion">
   </section>
