--- a/index.html
+++ b/index.html
@@ -131,7 +131,20 @@
     </article>
   </section>
   <section id="Section_11" class="section">
-    <h3>Section 11</h3>
+    <h3>Slider</h3>
+    
+      <div id="sliderContainer" class="sliderContainer sliderContainer">
+        <div id="sliderContainerDiv" class="sliderContainer sliderContainer">
+           <img src="https://placeimg.com/800/600/animals" alt="" id="slide0" class="slider sliderLeft">
+           <img src="https://placeimg.com/800/600/arch" alt="" id="slide1" class="slider sliderView" >
+           <img src="https://placeimg.com/800/600/nature" alt="" id="slide2" class="slider sliderRight" >
+           <img src="https://placeimg.com/800/600/people" alt="" id="slide3" class="slider sliderNone" >
+           <img src="https://placeimg.com/800/600/tech" alt="" id="slide4" class="slider sliderNone" >
+        </div>
+        <button class="btnSlider btnSliderRight" id="btnRight">></button>
+        <button class="btnSlider btnSliderLeft" id="btnLeft"><</button>
+      </div>
+    
   </section>
   <section id="Section_12" class="section">
     <h3>Section 12</h3>
