--- a/prueba.html
+++ b/prueba.html
@@ -5,65 +5,150 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Geposicionamiento</title>
   <style>
+:root{
+--first-color       :#f0db4f;
+--alpha-color       : 0.9;
+--second-color      : 50,51,48;
+--second-color-rgb  :rgb(var(--second-color));
+--t-texto           :30px;
+--t-texto-S         :35px;
+--t-texto--parrafos :20px;
+--bottomPX          :20px;
+--b-B-Color         : white;
+--btn-c-DOM-size    :60px
+}
+
+
+#articleSlider{
+  justify-content: center;
+  display: flex;
+}
+.sliderContainer{
+  max-height: 600px;
+  max-width: 800px;
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
+}
+#sliderContainerDiv{
+  position: absolute;
+}
+
+.btnSlider{
+  position: absolute;
+  border: none;
+  outline: none;
+  z-index: 2;
+  width: 40px;
+  height: 100%;
+  color: var(--first-color);
+  font-size: var(--t-texto);
+  background-color:rgba(var(--second-color),var(--alpha-color));
+  margin: 0;
+  transition: all 0.3s ease ;
+  opacity: 0.4;
+}
+.btnSlider:hover{
+  font-size:var(--t-texto-S);
+  width: 88px;
+  opacity: 0.9;
+}
+.btnSliderLeft{
+  left: 0;
+}
+.btnSliderRight{
+  right: 0;
+}
+.slider{
+  position: absolute;
+}
+.sliderView{
+  position: absolute;
+  z-index: 1;
+  right:0;
+  transition: all 0.5s ease;
+}
+.sliderLeft{
+  right:100%;
+  transition: all 0.5s ease;
+}
+.sliderRight{
+  right:-100%;
+  transition: all 0.5s ease;
+}
+.sliderNone{
+  display: none;
+}
   </style>
 </head>
 <body>
   
-  <article>
-    <div id="divSorteoCont">
-      <button id="btnAddToSorteo">Agregar<br>al sorteo</button>
-      <button id="btnReiniciarSorteo">Reiniciar</button>
+  <section id='articleSlider'>
+    <div id="sliderContainer" class="sliderContainer sliderContainer">
+      <div id="sliderContainerDiv" class="sliderContainer sliderContainer">
+         <img src="https://placeimg.com/800/600/animals" alt="" id="slide0" class="slider sliderLeft">
+         <img src="https://placeimg.com/800/600/arch" alt="" id="slide1" class="slider sliderView" >
+         <img src="https://placeimg.com/800/600/nature" alt="" id="slide2" class="slider sliderRight" >
+         <img src="https://placeimg.com/800/600/people" alt="" id="slide3" class="slider sliderNone" >
+         <img src="https://placeimg.com/800/600/tech" alt="" id="slide4" class="slider sliderNone" >
+      </div>
+      <button class="btnSlider btnSliderRight" id="btnRight">></button>
+      <button class="btnSlider btnSliderLeft" id="btnLeft"><</button>
     </div>
-    <input type="text" name="" id="inputTSorteo" placeholder="Ingresa Opcion al sorteo">
-    <button id="btnWinSorteo">Ganador</button>
-    <ul id="ilContSort"></ul>
-  </article>
+  </section>
 
 </body>
 <script>
 
-const arrSort=[],
-      clearIATSF=e=>document.getElementById(e).value='',
-      clearArrSort=_=>arrSort.splice(0,arrSort.length),
-      aLiSorteo=(ul,v)=>document.getElementById(ul).insertAdjacentHTML('beforeend',`<li>${v}</li>`),
-      anyToLiSort=(ul,m)=>document.getElementById(ul).innerHTML=m;
-
-function reinSorteo(e,ul){
-  clearIATSF(e)
-  clearArrSort()
-  anyToLiSort(ul,``)
-}
-
-function vStringATSF(e){
-    if(!e) return {check:false, message:`El campo esta vacio`};
-    if(typeof e!=='string') return {check:false, message:`No es un texto`};
-    return {check:true, message:`ok`};
+  function ordSlider(nowNumber,sUlt){
+    if(sUlt+1===1) return[nowNumber,nowNumber,nowNumber];
+    if(nowNumber===sUlt)return[nowNumber-1,nowNumber,0];
+    if(nowNumber===0)return[sUlt,nowNumber,nowNumber+1];
+    else return[nowNumber-1,nowNumber,nowNumber+1];
   }
 
-function addToSorteoF(e,ul){
-  let $intSValue=document.getElementById(e).value,
-      {check,message}=vStringATSF($intSValue);
-  if(check){
-    arrSort.push($intSValue);
-    aLiSorteo(ul,$intSValue)
-    clearIATSF(e);
-  } else {alert(message)}
-}
+  function sliderArr(arr,sUlt,idbtn){
+    let nArr=[], pArr, arrObj=[]
+    arr.forEach(e=>nArr.push(`slide${e}`))
+    if(idbtn==='btnRight'){
+      pArr=ordSlider(arr[2],sUlt)
+      nArr.push(`slide${pArr[2]}`)
+      arrObj=[
+        {n:nArr[0], r:'sliderLeft',a:'sliderNone'},
+        {n:nArr[1], r:'sliderView',a:'sliderLeft'},
+        {n:nArr[2], r:'sliderRight',a:'sliderView'},
+        {n:nArr[3], r:'sliderNone',a:'sliderRight'}
+      ]}
+    if(idbtn==='btnLeft'){
+      pArr=ordSlider(arr[0],sUlt)
+      nArr.unshift(`slide${pArr[0]}`)
+      arrObj=[
+        {n:nArr[0], r:'sliderNone',a:'sliderLeft'},
+        {n:nArr[1], r:'sliderLeft',a:'sliderView'},
+        {n:nArr[2], r:'sliderView',a:'sliderRight'},
+        {n:nArr[3], r:'sliderRight',a:'sliderNone'}
+      ]}
+      arrObj.forEach(e=>{
+        document.querySelector(`#${e.n}`).classList.remove(e.r)
+        document.querySelector(`#${e.n}`).classList.add(e.a)
+      })
+  }
 
-function winSorteo(e,ul){
-  if(arrSort.length!==0){
-    let result = arrSort[Math.round(Math.random()*(arrSort.length-1))]
-    anyToLiSort(ul,`<h3>El ganador es: ${result}</h3>`)
-    setTimeout(() => {
-      reinSorteo(e,ul)
-    }, 10000);
-  } else {alert(`No hay elemntos para participar en le sorteo`)}
-}
-
+  function slideActual(slider,view,idbtn){
+    let $slider=document.querySelectorAll(slider),
+        sUlt=$slider.length-1,
+        nowNumber='',
+        arr
+    $slider.forEach(e=>{if(e.classList[1]===view)nowNumber=parseInt(e.id.charAt(5),10)})
+    arr=ordSlider(nowNumber,sUlt)
+    sliderArr(arr,sUlt,idbtn)
+  }
+setInterval(() => {
+  slideActual('.slider','sliderView','btnRight')
+}, 5000);
 document.addEventListener('click',e=>{
-  if(e.target.matches('#btnAddToSorteo'))addToSorteoF('inputTSorteo','ilContSort')
-  if(e.target.matches('#btnReiniciarSorteo'))reinSorteo('inputTSorteo','ilContSort')
-  if(e.target.matches('#btnWinSorteo'))winSorteo('inputTSorteo','ilContSort')
+  if(e.target.matches('#btnRight')||e.target.matches('#btnLeft')){slideActual('.slider','sliderView',e.target.id)}
 })
 
 </script>
