vS11 cirrrigiendo errores

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_8">Geolocalizacion</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_9">Filtro</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_10">Random Win</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_11">Section 11</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_11">Slider</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_12">Section 12</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_13">Section 13</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_14">Section 14</a></li>
