--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </span>
     </button>  
   </section>
-  <nav id="menuPalanca" class="palanca">
+  <nav id="menuPalanca" class="palanca menuPalanca">
     <ul>
       <li><a class="aMenuNav botonPalanca" href="#Section_1">Reloj Digital y alarma Sonora</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_2">Evento Teclado</a></li>
