--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_9">Filtro</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_10">Random Win</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_11">Slider</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_12">Section 12</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_12">Smart Video</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_13">Section 13</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_14">Section 14</a></li>
     </ul>
@@ -147,7 +147,8 @@
     
   </section>
   <section id="Section_12" class="section">
-    <h3>Section 12</h3>
+    <h3>Smart Video</h3>
+    <video id="myVideo" src="http://cdn.brid.tv/live/partners/10940/sd/653124.mp4" muted loop></video>
   </section>
   <section id="Section_13" class="section">
     <h3>Section 13</h3>
